Unify the search engine, search Kafka headers, share and export a trace
One matching engine
- The stream flow carried its own regex + JSONPath + XPath matcher and its own
  record fetch, so a key the Topic Explorer found could be missed by the trace,
  and every improvement had to be made twice. It now builds a TopicSearchRequest
  and delegates to TopicSearchService / MessageMatcher.
- What that brings the trace: field operators, the streaming parser that prunes
  subtrees instead of building a document tree, per-topic scan budgets with a
  stop reason, and values truncated on the way out instead of a thousand full
  payloads held per topic.
- The search path picks the mode: header:name, /a/b (XPath), $..id or a filter
  (full JSONPath), anything else a dot path resolved against JSON and XML alike.
  A bare field name used to be rejected outright even though it is the notation
  the Topic Explorer's own field list produces.
- MessageMatcher gains XPATH and JSONPATH modes so nothing the old trace could
  express is lost, and evaluate() returns a MatchOutcome instead of a boolean —
  a payload the path could not be applied to is not the same answer as a miss,
  and both screens now say which zero they mean.
- TopicSearchService gains a LAST_N seek (the most recent records, clamped to
  the beginning offset) — the trace's default window had no equivalent.

Kafka headers are searchable
- HEADER mode compares one named header (exact, then case-insensitive) with the
  usual operators; searchHeaders widens a text or regex pass to every header
  value. Correlation ids very often travel only there (correlation-id, W3C
  traceparent) and a search that never looked reported a confident "not found".
- Default off for a topic search — turning it on silently would change what an
  existing search returns — and on for a trace. Both are explicit in the request
  and exposed in the UI.

Share and export a trace
- The whole criterion round-trips through the query string; the URL is 